# glOS

./: CMakeLists.txt  Makefile  README.md  compile.bat  link.ld  run.bat  run.sh
source/: bootloader.asm  compile.bat  gdt.asm
source/boot/: bootloader.asm  gdt.asm
source/bootloader/: README.md  bootloader.asm  gdt.asm  io.asm
source/drivers/: display.c  display.h
source/kernel/: CPUID.asm  entry.asm  id_paging.asm  identity_paging.asm  idt.h  io.h  kernel.asm  kernel.c  memory.h  typedef.h
source/kernel/IDT/: idt.asm  idt.c  idt.h
source/kernel/interrupts/: idt.asm  idt.c  idt.h
